Update link for 'Attend a Training' section

--- a/materials.html
+++ b/materials.html
@@ -229,7 +229,7 @@
                 <h2>Start Here</h2>
                 <div class="bookshelf">
                     <a href="https://docs.google.com/document/d/11UxwIkGMwqZjRQWMjpBnKzSUeKCMKIKWB_cYLEx9mq0/edit?tab=t.0" class="book" aria-label="Host a Training Rollout">Host a Training Rollout</a>
-                    <a href="#calendar" class="book" aria-label="Attend a Training">Attend a Training</a>
+                    <a href="index.html#calendar" class="book" aria-label="Attend a Training">Attend a Training</a>
                     <a href="https://www.obeychrist.com" class="book" aria-label="Disciple a New Believer">Disciple a New Believer</a>
                     <a href="https://www.youtube.com/watch?v=jgqHTRdJVBQ&list=PLNRYzNOHxJtDwXF0QgvI1nTA6csgartXc" class="book" aria-label="Understand Four Fields">Understand Four Fields</a>
                 </div>
