Update 411 Training link in materials.html

--- a/materials.html
+++ b/materials.html
@@ -240,7 +240,7 @@
                 <div class="bookshelf">
                     <a href="https://docs.google.com/spreadsheets/d/1Sbn-2VibgR2R4FIKM2rlfUIMBgk98xyJ-HxkB4nJyYk/edit?gid=521386433#gid=521386433" class="book" aria-label="Sample GCT Schedule">Sample GCT Schedule</a>
                     <a href="https://www.youtube.com/watch?v=HKcWXPtQXhc&list=PL3FAZqigucLzXTMM_NQOMfveZdehLd9ZC&index=1" class="book" aria-label="Training and Teaching">Training and Teaching</a>
-                    <a href="https://www.youtube.com/watch?v=D5az2LAtDDw&list=PL3FAZqigucLzWG9Ttgi-D2pIssNP04LHf" class="book" aria-label="411 Training">411 Training</a>
+                    <a href="https://youtu.be/NQLVAME5dnI?si=Z21Ai8uFGxs-EcE4" class="book" aria-label="411 Training">411 Training</a>
                     <a href="https://youtu.be/cEiLWwJb-lo?si=Cf637RGISIL2Ix6V" class="book" aria-label="Model Command of Christ #1">Model Command of Christ #1</a>
                     <a href="https://www.youtube.com/watch?v=i9c6KVAqObs" class="book" aria-label="Five Parts / Four Fields">Five Parts / Four Fields</a>
                 </div>
