Update link for Player Coach Training Videos

--- a/materials.html
+++ b/materials.html
@@ -266,7 +266,7 @@
             <section id="player-coach">
                 <h2>Player Coach Training</h2>
                 <div class="bookshelf">
-                    <a href="https://www.playercoachtraining.com" class="book" aria-label="Player Coach Training Videos">Player Coach Training Videos</a>
+                    <a href="https://www.playercoaches.com" class="book" aria-label="Player Coach Training Videos">Player Coach Training Videos</a>
                 </div>
             </section>
         </div>
