Update header background image and transition effect

--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
         }
         header {
             background-color: #1c2533; /* Fallback color */
-            background-image: url('tyler-coleman-TFQBG_gFROc-unsplash-2.jpg');
-            background-repeat: repeat; /* Ensures the pattern tiles */
-            background-size: 240px 160px; /* Adjust size if needed */
+            background-image: url('adil-edin-VdDNWulqfBo-unsplash.jpg');
+            background-size: auto;
             color: #ffffff;
             text-align: center;
             position: sticky;
             top: 0;
             z-index: 1000;
             border-bottom: 1px solid #b7a57a;
-            transition: all 0.3s ease; /* Smooth transition for shrinking */
+            transition: all 0.3s ease-in-out; /* Smooth transition for shrinking */
         }
         header.shrunk {
             /* No padding */
