Change header background image to 'Stone castlewall.jpg'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         header {
             background-color: #1c2533; /* Fallback color */
-            background-image: url('adil-edin-VdDNWulqfBo-unsplash.jpg');
+            background-image: url('Stone castlewall.jpg');
             background-size: auto;
             color: #ffffff;
             text-align: center;
