Change background size to cover for header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         header {
             background-color: #1c2533; /* Fallback color */
             background-image: url('Stone castlewall.jpg');
-            background-size: auto;
+            background-size: cover;
             color: #ffffff;
             text-align: center;
             position: sticky;
