--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            border-bottom: 1px solid #b7a57a;
+            border-bottom: 1px solid #c6ab6a;
             transition: all 0.3s ease-in-out; /* Smooth transition for shrinking */
         }
         header.shrunk {
@@ -45,6 +45,13 @@
         }
         header h1 {
             font-family: 'Lora', serif;
+            margin: 0;
+            font-size: 2.5em;
+            transition: opacity 0.3s ease; /* Fade out title */
+        }
+        header h4 {
+            font-family: 'Lora', serif;
+            color: #c6ab6a;
             margin: 0;
             font-size: 2.5em;
             transition: opacity 0.3s ease; /* Fade out title */
@@ -65,7 +72,7 @@
             overflow: hidden;
         }
         nav {
-            background-color: #b7a57a;
+            background-color: #c6ab6a;
             padding: 10px 0;
         }
         nav ul {
@@ -121,7 +128,7 @@
         }
         .cta {
             display: inline-block;
-            background-color: #b7a57a;
+            background-color: #c6ab6a;
             color: #ffffff;
             padding: 10px 20px;
             text-decoration: none;
@@ -160,7 +167,7 @@
             height: auto;
             display: block;
             margin: 0 auto 20px;
-            border: 1px solid #b7a57a;
+            border: 1px solid #c6ab6a;
             border-radius: 5px;
         }
         .calendar-container {
@@ -173,7 +180,7 @@
             font-size: 0.9em;
         }
         th, td {
-            border: 1px solid #b7a57a;
+            border: 1px solid #c6ab6a;
             padding: 8px;
             text-align: left;
         }
@@ -223,11 +230,11 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
-            border: 1px solid #b7a57a;
+            border: 1px solid #c6ab6a;
             font-family: 'Open Sans', sans-serif;
         }
         button {
-            background-color: #b7a57a;
+            background-color: #c6ab6a;
             color: #ffffff;
             padding: 10px 20px;
             border: none;
@@ -274,7 +281,7 @@
 <body>
     <header id="header">
         <img src="https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png" alt="American Church Planting Training Logo">
-        <h1>American Church Planting Training</h1>
+        <h4>American Church Planting Training</h4>
         <p>5 Trainings in 12 Months</p>
     </header>
 
