Add text shadow to header title

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             margin: 0;
             font-size: 2.5em;
             transition: opacity 0.3s ease; /* Fade out title */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
         header.shrunk h1 {
             opacity: 0;
