Replace image source with local file

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 </head>
 <body>
     <header id="header">
-        <img src="https://raw.githubusercontent.com/counciloftroas/counciloftroas.github.io/refs/heads/main/Asset%201.png" alt="American Church Planting Training Logo">
+        <img src="ACPT Logo.png" alt="American Church Planting Training Logo">
         <h1>American Church Planting Training</h1>
     </header>
 
