Replace training plan image with updated version

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <main>
         <section id="training-plan" class="training-plan">
             <h2>Our Training Plan</h2>
-            <img src="ACPT Plan.png" alt="American Church Planting Training Plan">
+            <img src="ACPT Plan1.png" alt="American Church Planting Training Plan">
             <h3>Trainings</h3>
             <p>Gospel Conversations Training - equips you with basic tools and practices to proclaim Christ and make disciples.</p>
             <p>4 Fields Intensive Training - develop biblical foundaiton for church planting and disciple-making.</p>
