Update Training Calendar link to absolute URL

--- a/materials.html
+++ b/materials.html
@@ -215,7 +215,7 @@
 
     <nav>
         <ul>
-            <li><a href="#calendar">Training Calendar</a></li>
+            <li><a href="https://americanchurchplanting.com/index.html#calendar">Training Calendar</a></li>
             <li><a href="materials.html">Training Materials</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
